--- a/src/pages/Walling.css
+++ b/src/pages/Walling.css
@@ -323,10 +323,6 @@
   }
 }
 @media (min-width: 1025px) {
-  .walling-benefits-grid,
-  .walling-sub-grid {
-    grid-template-columns: initial;
-  }
   .walling-tech {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
